Name and description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "clinicaltrials-frontend",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Web Site for ClinicalTrials - include wallet download and backoffice web management application",
+  "author": {
+      "name": "PharmaLedger Team at PDM",
+      "email": "pharmaledger.team@pdmfc.com"
+  },
+  "license": "PharmaLedger",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
