ng g component appresource

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "clinicaltrials-frontend"
+  "defaultProject": "clinicaltrials-frontend",
+  "cli": {
+    "analytics": false
+  }
 }
