--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clinicaltrials-frontend",
+  "name": "ctr-backoffice-frontend",
   "version": "0.0.1",
   "description": "Web Site for ClinicalTrials - include wallet download and backoffice web management application",
   "author": {
